--- a/index.html
+++ b/index.html
@@ -1,7 +1,36 @@
-<div style="position: relative; width: 100%; height: 0; padding-top: 140.0000%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>15Manu</title>
+  <style type="text/css">
+    html {
+        overflow: auto;
+    }
+    
+    html,
+    body,
+    div,
+    iframe {
+        margin: 0px;
+        padding: 0px;
+        height: 100%;
+        border: none;
+    }
+    
+    iframe {
+        display: block;
+        width: 100%;
+        border: none;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+</style>
+</head>
+<body>
   <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
     src="https://www.canva.com/design/DAGcqfFzV4U/7UNb-dQNv_NOB8bdi_PpHg/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
-</div>
+</body>
+</html>
